# vercel-fastapi

./: .pdm-python  main.py  pyproject.toml  requirements.txt  vercel.json
src/: api.py  main.py
